examples/errors/programs/error_2.bas
LINE_ONE if 15=3*5 then LINE_TWO
LINE_TWO print "This is a simple test for errors"
